--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 
     <noscript><h1>Please ensure JavaScript is enabled in Settings and/or your security program.</h1></noscript>
 
+    <link rel="stylesheet" type="text/css" href="main.css">
+
     <title>Apurture Store&copy &reg &#8482;</title>
 
     <meta name="author" content="Dawson Murray">
@@ -18,15 +20,21 @@
   </head>
 
   <body>
+    <div>
+      <nav>
 
-    <header>
-      <h1 style="text-align:center;float:left;">Aperture</h1>
-      <h10 style="text-align:center;float:right;">&copy &reg &#8482;</h10>
-      <hr style="clear:both;"/>
-    </header>
+      </nav>
+    </div>
+    <div>
+      <header>
+        &nbsp
+        &nbsp
+        <h1 class="apertureTitle">APERTURE<span class="subtext">&copy &reg &#8482;</span></h1>
+        &nbsp
+        &nbsp
+      </header>
+    </div>
+    <div>
 
-    <link rel="stylesheet" type="text/css" href="../main.css">
-
-    <!--<script src="../scripts/childTemplate.js"></script>-->
-
+    </div>
   </body>
