--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
     <noscript><h1>Please ensure JavaScript is enabled in Settings and/or your security program.</h1></noscript>
 
     <link rel="stylesheet" type="text/css" href="main.css">
+    <link rel="stylesheet" type="text/css" href="stickyNav.css">
 
-    <title>Apurture Store&copy &reg &#8482;</title>
+    <script src="index.js"></script>
+
+    <title>Apurture&copy &reg &#8482; Home</title>
 
     <meta name="author" content="Dawson Murray">
     <meta name="description" content="a rather poorly made parody of what a store website for apurture science might be. Made by a student in vary early lessons">
@@ -21,11 +24,6 @@
 
   <body>
     <div>
-      <nav>
-
-      </nav>
-    </div>
-    <div>
       <header>
         &nbsp
         &nbsp
@@ -35,6 +33,37 @@
       </header>
     </div>
     <div>
-
+      <nav id="navbar">
+        <a href="index.html" style="background-color: #ded11f">Home</a>
+        <a href="childPages/store.html">Store</a>
+        <a href="childPages/contact.html">Contact</a>
+      </nav>
+      <script src="sticky.js"></script>
+    </div>
+    <div>
+      &nbsp
+      &nbsp
+      <p>The worlds science and innovation leader, with a network of corporate and independently- operated labs in communities across the globe, and employing close to 600,000,000 scientists.</p>
+      &nbsp
+      &nbsp
+      <p>Apurture's&copy &reg &#8482; purpose – Live Life Well – supports the needs and well-being of all who make one billion visits* each year to the company’s labs.</p>
+      &nbsp
+      &nbsp
+      <p>Apurture&copy &reg &#8482; is positioned to meet and exceed those needs in many ways: convenient locations that span the value spectrum from discount to specialty; full-service pharmacies; no-fee banking;
+      affordable fashion and family apparel; and, all of the worlds top consumer brands in President's Choice®, Life Brand®, and no name®.</p>
+      &nbsp
+      &nbsp
+      <p>We are a global group of labrotory and testing companies with an average of 92,000 employees in more than 70 countries. We use advanced technologies and take an innovative approach to help build a sustainable future.</p>
+      &nbsp
+      &nbsp
+      <p>We’re passionate about our customers, our employees and the communities we serve. Learn about the values, vision and leadership behaviours that make us the no. 1 reserch company in the world.</p>
+      &nbsp
+      &nbsp
+      <p>We are driven by innovation in the marketplace, excellence in customer service, and integrity and respect in our actions.</p>
+      &nbsp  &nbsp  &nbsp  &nbsp  &nbsp  &nbsp  &nbsp  &nbsp  &nbsp  &nbsp  &nbsp  &nbsp  &nbsp  &nbsp  &nbsp  &nbsp  &nbsp  &nbsp  &nbsp  &nbsp  &nbsp  &nbsp  &nbsp  &nbsp  &nbsp  &nbsp  &nbsp  &nbsp  &nbsp  &nbsp  &nbsp  &nbsp  &nbsp  &nbsp
+      <p id="symbol"></p>
+      <script>
+      symbolCounter();
+      </script>
     </div>
   </body>
